--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "olivajordan",
   "version": "0.1.0",
   "private": true,
+  "description": "Official website for Oliva Italian Restaurant — Jabal Al Lweibdeh, Amman. Authentic Italian dishes, clay-oven pizzas, and local warmth since 2011.",
+  "author": {
+    "name": "Omar Zeidan",
+    "email": "iam.omarzeidan@gmail.com",
+    "url": "https://github.com/omarZeidan"
+  },
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,6 +19,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
