--- a/components.json
+++ b/components.json
@@ -16,7 +16,8 @@
     "utils": "@/lib/utils",
     "ui": "@/components/ui",
     "lib": "@/lib",
-    "hooks": "@/hooks"
+    "hooks": "@/hooks",
+    "public": "@/public"
   },
   "registries": {}
 }
